# multi-agentic-bft

./: .gitattributes  .gitignore  DETAILED_GUIDE.md  README.md  checklist.md  pyproject.toml  pyrightconfig.json  run_network_monitor.py
aegean/: __init__.py  benchmark.py  commit_semantics.py  decision_engine.py  election.py  election_http.py  election_transport.py  events.py  helpers_utils.py  logutil.py  protocol.py  refinement_state.py  semantic_equivalence.py  session_trace.py  task_routing.py  types.py
aegean/adapters/: __init__.py  base.py  (+2 more)
docs/: DETAILED_GUIDE.md  checklist.md  original_plan.md  references.md
examples/: README.md  consensus_entry.py  minimal_http_execute_server.py  prefetch_semantic_model.py  simple_cluster.py
logs/: .gitignore
multi_agentic_bft.egg-info/: PKG-INFO  SOURCES.txt
network-monitor/: README.md  smoke_http.py
tests/: aegean_test_utils.py  mocks.py  test_adapters.py  test_adversarial_refm_round_track.py  test_aegean_byzantine_e2e.py  test_aegean_events.py  test_aegean_helpers_utils.py  test_aegean_leader_e2e.py  test_aegean_multiround_e2e.py  test_aegean_paper_config.py  test_aegean_protocol.py  test_aegean_quorum_e2e.py  test_aegean_task_routing.py  test_benchmark_inference_reduction.py  test_commit_semantics.py  test_decision_engine.py  test_election.py  test_election_http.py  test_election_stall_retry.py  test_network_monitor_recovery_store.py  test_network_monitor_tcp_session.py  test_proof_invariants.py  test_recovery_protocol.py  test_refinement_state.py  test_runtime_commit_certificate.py  test_semantic_equivalence.py
(+28 files in other folders)
