[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agentic-bft"
version = "0.1.0"
description = "Python port of Nexus Aegean consensus core"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "numpy>=1.24", "hdbscan>=0.8.33"]
semantic = ["numpy>=1.24", "hdbscan>=0.8.33", "sentence-transformers>=2.2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
# Default: unit/static only (excludes ``live``). Live: ``pytest -m live``. Everything: ``pytest --override-ini addopts=``.
addopts = "-m \"not live\""
markers = [
    "live: full Aegean protocol sessions (integration-style), not isolated unit tests",
    "stress: heavier load tests without semantic similarity (subset of live; pytest -m \"live and stress\")",
]

[tool.setuptools.packages.find]
include = ["aegean*"]
